--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -125,11 +125,24 @@ input[type="checkbox"] {
     animation: slideIn 0.3s linear;
     background-color: red;
 }
+.hasFailed:hover {
+    background-color: rgba(255, 0, 0, 0.80);
+}
 
 .errorMsg {
     color: red;
     font-size: 1rem;
     margin: 0.5rem;
+}
+
+.errorMessageBox {
+    width: 100%;
+    background-color: rgba(255, 0, 0, 0.25);
+    color: red;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 700;
+    border-radius: 12px;
 }
 
 @keyframes slideIn {
