--- a/src/components/Result.module.css
+++ b/src/components/Result.module.css
@@ -6,3 +6,37 @@
     background-color: rgb(143, 203, 243);
     border-radius: 12px;
 }
+
+.actionContainer {
+    width: 100%;
+    text-align: center;
+}
+
+.downloadBtn {
+    width: 400px;
+    margin: 1rem 0;
+    padding: 1rem 2rem;
+    background: rgb(218, 120, 10);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 50px;
+    border: none;
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.downloadBtn:hover {
+    background: rgb(185, 102, 6);
+}
+
+.errorMsg {
+    color: red;
+    background-color: rgba(255, 0, 0, 0.25);
+    font-size: 1rem;
+    font-weight: 600;
+    text-align: center;
+    padding: 1rem 0.5rem;
+    margin: 0.3rem 0;
+    border-radius: 12px;
+}
