--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -23,6 +23,12 @@
     margin-bottom: 1.5rem;
 }
 
+.fileUploadContainer p {
+    margin: 0.1rem;
+    font-size: 0.8rem;
+    font-weight: 600;
+}
+
 .file-upload-box {
     font-size: 16px;
     background: white;
@@ -53,6 +59,34 @@
     padding: 0.2rem 0;
     border-radius: 12px;
 
+}
+
+.splitRatioContainer {
+    width: 100%;
+    text-align: center;
+}
+.splitRatioContainer p {
+    margin: 0.1rem;
+    font-size: 0.8rem;
+    font-weight: 600;
+}
+
+.ratioInput {
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    margin: 0.5rem;
+    border-radius: 12px;
+    border: 1px solid #888;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25);
+}
+
+.ratioInput:focus {
+    outline: 1px solid #000;
+}
+
+.ratioInput::placeholder {
+    font-size: 1rem;
 }
 
 .form-checkbox-list {
@@ -129,10 +163,14 @@ input[type="checkbox"] {
     background-color: rgba(255, 0, 0, 0.80);
 }
 
-.errorMsg {
+.inputErrorMsg {
     color: red;
     font-size: 1rem;
     margin: 0.5rem;
+    padding: 0.25rem 0.5rem;
+    background-color: rgba(255, 0, 0, 0.2);
+    text-align: center;
+    border-radius: 6px;
 }
 
 .errorMessageBox {
@@ -140,9 +178,13 @@ input[type="checkbox"] {
     background-color: rgba(255, 0, 0, 0.25);
     color: red;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 700;
     border-radius: 12px;
+}
+
+.errorMessageBox p {
+    margin: 0.5rem;
 }
 
 @keyframes slideIn {
