--- a/src/components/Intro.module.css
+++ b/src/components/Intro.module.css
@@ -1,10 +1,10 @@
 .intro-container {
     max-width: 100vw;
     width: 90%;
-    margin: 2rem auto;
+    margin: 1.5rem auto;
     padding: 2rem 1rem;
     border-radius: 12px;
-    background-color: rgb(203, 229, 236);
+    background-color: rgba(203, 229, 236, 0.9);
     display: flex;
     flex-direction: column;
     gap: 1rem;
